Fixed padding for navbar dropdown menu links on mobile view. Cleaned up head for homepage.

--- a/css/style-main.css
+++ b/css/style-main.css
@@ -361,8 +361,8 @@ section#featured > div.row > div#myCarouselContainer {
 .navbar li a, .navbar .navbar-brand {
   color: #fff !important;
   font-size: 16px;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 25px !important;
+  padding-bottom: 25px !important;
 }
 .navbar-nav li a:hover, .navbar-nav li.active a {
   color: #4bafc9 !important;
